# pycppgen

./: .gitignore  README.md
src/: main.py  pycppgen.py  run_tests.py
tests/: CMakeLists.txt  class.gen.cpp  class.gen.h  class.h  enum.gen.h  enum.h  function.gen.h  function.h  namespace.gen.h  namespace.h  pycppgen.gen.cpp  pycppgen.gen.h  pycppgen.h  struct.gen.h  struct.h  template.gen.h  template.h  tests.cpp
tests/app/: class.h  namespace.h  template.h  tests.cpp
tests/lib/: enum.h  function.h  lib.cpp  struct.h
